--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://github.com/boodyvo/happybday.github.io",
+  "homepage": "https://boodyvo.github.io/happybday.github.io/",
   "browserslist": {
     "production": [
       ">0.2%",
